<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>zrlog</artifactId>
        <groupId>com.zrlog</groupId>
        <version>2.2.6-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>web</artifactId>
    <packaging>war</packaging>

    <properties>
        <tomcatVersion>9.0.56</tomcatVersion>
        <tomcat-scope>compile</tomcat-scope>
        <contextPath>/${finalName}</contextPath>
        <jarOutputDirectory>${project.basedir}/src/main/</jarOutputDirectory>
        <libOutputPath>lib</libOutputPath>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.zrlog</groupId>
            <artifactId>blog-web</artifactId>
        </dependency>
        <dependency>
            <groupId>com.zrlog</groupId>
            <artifactId>admin-web</artifactId>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <scope>provided</scope>
        </dependency>


        <!--tomcat embed mode-->
        <dependency>
            <groupId>org.apache.tomcat.embed</groupId>
            <artifactId>tomcat-embed-core</artifactId>
            <version>${tomcatVersion}</version>
            <scope>${tomcat-scope}</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomcat.embed</groupId>
            <artifactId>tomcat-embed-jasper</artifactId>
            <version>${tomcatVersion}</version>
            <scope>${tomcat-scope}</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                        <configuration>
                            <filesets>
                                <fileset>
                                    <directory>${jarOutputDirectory}/${libOutputPath}</directory>
                                </fileset>
                            </filesets>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <resourceEncoding>${project.build.sourceEncoding}</resourceEncoding>
                    <warSourceDirectory>src/main/webapp</warSourceDirectory>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                    <recompressZippedFiles>true</recompressZippedFiles>
                    <packagingExcludes>
                        WEB-INF/classes/rebel.xml,
                        WEB-INF/classes/com/zrlog/web/Application.class,
                        include/templates/.idea/**,
                        include/templates/*.zip,
                        attached/**,
                        WEB-INF/plugins/**,
                        WEB-INF/update-temp/**,
                        WEB-INF/lib/tomcat*,
                        WEB-INF/lib/ecj*,
                        post/**,
                        _cache/**,
                        **/css/*.map,
                        **/js/*.map,
                        admin/service-worker.js,
                        admin/asset-manifest.json,
                        admin/precache-manifest*,
                        install/service-worker.js,
                        install/asset-manifest.json,
                        install/precache-manifest*,
                    </packagingExcludes>
                    <warName>${finalName}-${project.version}</warName>
                    <outputDirectory>${project.build.directory}/../../target</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${jarOutputDirectory}/${libOutputPath}</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <includeScope>compile</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <finalName>${finalName}</finalName>
                    <classifier>starter</classifier>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>${libOutputPath}</classpathPrefix>
                            <mainClass>com.zrlog.web.Application</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Class-Path>.</Class-Path>
                        </manifestEntries>
                    </archive>
                    <outputDirectory>${jarOutputDirectory}</outputDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>